# SQPlusPlus

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: node.hpp  stack.hpp
src/: stack.cpp
test/: CMakeLists.txt  test_stack.cpp
